# stock

./: Cargo.toml  docker-compose.yml
src/: db.rs  main.rs  money.rs
templates/: add_item.html  list.html
